--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -562,267 +562,305 @@ $X$の開集合$U$に対して
   \end{equation*}
   とする.ただし,$\sigma$は任意の$x\in U$に対して$\sigma(x) \in \mathcal{F}_{x}$とする.
   また,$V \subset U$なる開集合に対し,
-$$
-  \begin{array}{rccc}
-    \rho_{U,V}^{\mathcal{F}^{\dagger}}: & \mathcal{F}^{\dagger}(U) & \longrightarrow & \mathcal{F}^{\dagger}(V) \\
-                                        & \rotatebox{90}{$\in$}    &                 & \rotatebox{90}{$\in$}    \\
-                                        & \sigma                   & \longmapsto     & \sigma|_{V}
-  \end{array}
-$$
-が定義できる.実際,任意の$x\in V$をとる.$V \subset U$であり,
-$\sigma \in \mathcal{F}^{\dagger}(U)$より
-\begin{center}
-  $x\in \exists U_{0} \subset U$:open,$\exists s \in \mathcal{F}(U_{0})$\, s.t.\, $\sigma(y)=s_{y}\, (\forall y\in U_{0})$
-\end{center}
-$V_{0} = U_{0} \cap V,\quad t = s|_{V_{0}}$とすると任意の$y\in V_{0}$に対して
-\begin{equation*}
-  \sigma(y)=\sigma|_{V}(y)=s_{y}
-\end{equation*}
-さらに帰納極限の定義から
-\begin{equation*}
-  \sigma|_{V}(y)=t_{y}
-\end{equation*}
-次に$\mathcal{F}^{\dagger}(U)$がアーベル群,つまり
-$\sigma,\tau \in \mathcal{F}^{\dagger}(U)$ならば$\sigma+\tau \in \mathcal{F}^{\dagger}(U)$
-を示そう.\\
-$\sigma,\tau \in \mathcal{F}^{\dagger}(U)$より任意の$x\in U$に対して
-\begin{align*}
-   & x\in \exists U_{0} \subset U:\mathrm{open},\exists s \in \mathcal{F}(U_{0})\ \mathrm{s.t.}\
-  \sigma(y) = s_{y}\ (\forall y \in U_{0})                                                       \\
-   & x\in \exists V_{0} \subset U:\mathrm{open},\exists t \in \mathcal{F}(V_{0})\ \mathrm{s.t.}\
-  \tau(z) = t_{z}\ (\forall z \in V_{0})
-\end{align*}
-を満たす.いま$W = U_{0} \cap V_{0},s' = s|_{W},t' = t|_{W}$とすると,
-\begin{align*}
-  x\in W \subset U:\mathrm{open}, s',t' \in \mathcal{F}(W)\ \mathrm{s.t.}\
-  (\sigma + \tau)(y)
-   & = \sigma(y) + \tau(y)             \\
-   & = s_{y} + t_{y}                   \\
-   & = (s + t)_{y} \ (\forall y \in W)
-\end{align*}
-よって$\sigma + \tau \in \mathcal{F}^{\dagger}(U)$また明らかに可換.
-よって$\mathcal{F}^{\dagger}(U)$はアーベル群.\\
-また,通常の制限で制限写像を定義しているため,$\mathcal{F}^{\dagger}$は前層となる.\\
-更に層となることを示そう.\\
-$U$を$X$の開集合とし,$\{U_{i}\}_{i}$をその開被覆とする.$\sigma\in \mathcal{F}^{\dagger}(U)$が
-任意の$i$に対して$\sigma|_{U_{i}} = 0$とする.つまり任意の$x \in U_{i}$に対して$\sigma(x) = 0$
-とする.$U_{i}$は$U$を被覆するので結局$\sigma = 0$となる.\\
-次に,$\sigma_{i} \in \mathcal{F}^{\dagger}(U_{i})$とし,
-$\sigma_{i}|_{U_{i} \cap U_{j}} = \sigma_{j}|_{U_{i} \cap U_{j}}$と仮定すると,
-$$
-  \begin{array}{rccc}
-    \sigma : & U                     & \longrightarrow & \displaystyle \prod_{x\in U}\mathcal{F}_{x} \\
-             & \rotatebox{90}{$\in$} &                 & \rotatebox{90}{$\in$}                       \\
-             & x                     & \longmapsto     & \sigma_{i}(x)
-  \end{array}
-$$
-ただし,$x\in U_{i}$.すると,$\sigma$は$\sigma_{i}\in \mathcal{F}^{\dagger}(U_{i})$を張り合わせて作っているので
-これは$\sigma \in \mathcal{F}(U)$となることが容易にわかる。よって、$\mathcal{F}^{\dagger}$は層になる。
-}
-
-
-
-\Proposition{
-  層化の射$\theta:\mathcal{F} \to \mathcal{F}^{\dagger}$に対して、
-  その茎の射$\theta_{x}:\mathcal{F}_{x} \to \mathcal{F}^{\dagger}_{x}$は同型である。
-}{}
-
-
-
-\Lemma{
-  $\mathcal{F}$を$X$上の層とし、$\mathcal{F}'$を$\mathcal{F}$の部分層とする。
-  このとき開集合$U$を$\mathcal{F}(U)/\mathcal{F}'(U)$に対応させるものは前層になる。
-}{
-  この対応を$\mathcal{G}$とおく。$V \subset U$なる開集合$U,V$をとる。制限写像を
   $$
     \begin{array}{rccc}
-      \rho_{U,V}^{\mathcal{G}} : & \mathcal{F}(U)/\mathcal{F}'(U) & \longrightarrow & \mathcal{F}(V)/\mathcal{F}'(V)                \\
-                                 & \rotatebox{90}{$\in$}          &                 & \rotatebox{90}{$\in$}                         \\
-                                 & s + \mathcal{F}'(U)            & \longmapsto     & \rho_{U,V}^{\mathcal{F}}(s) + \mathcal{F}'(V)
+      \rho_{U,V}^{\mathcal{F}^{\dagger}}: & \mathcal{F}^{\dagger}(U) & \longrightarrow & \mathcal{F}^{\dagger}(V) \\
+                                          & \rotatebox{90}{$\in$}    &                 & \rotatebox{90}{$\in$}    \\
+                                          & \sigma                   & \longmapsto     & \sigma|_{V}
     \end{array}
   $$
-  とすると、これはwell-definedである。また、$U\subset V \subset W$なる開集合の組に対して
-  \begin{equation*}
-    \rho_{U,W}^{\mathcal{G}} = \rho_{V,W}^{\mathcal{G}} \circ \rho_{U,V}^{\mathcal{G}}
-  \end{equation*}
-  が成り立つことは制限写像の定義から明らかである。よって$\mathcal{G}$は前層。
-}
-\Definition{
-  Lem:\ref{Lem:1.3.8}で定義した前層の層化を$\mathcal{F}/\mathcal{F}'$と書いて、\textbf{商層(quotient shaef)}という。
-}
-\Definition{
-  $\alpha:\mathcal{F} \to \mathcal{G}$を前層の射とする。このとき開集合$U$に対して
-  $U \mapsto \ker ({\alpha(U)})$とするものは$\mathcal{F}$の部分層になる。これを$\ker{\alpha}$と
-  書いて、\textbf{$\alpha$の核(kernel of $\alpha$)}という。\\
-  更に、$U\mapsto \im (\alpha(U))$は一般には前層となるので、これの層化を$\im \alpha$と書いて、
-  \textbf{$\alpha$の像(image of $\alpha$)}という。
-}
-\Lemma{
-  $\mathcal{F,G}$を$X$上の層,$\mathcal{F}'$を$\mathcal{F}$の部分層,$\alpha:\mathcal{F} \to \mathcal{G}$を前層の射とする。
-  このとき、
-  \begin{align*}
-     & (\ker \alpha)_{x} = \ker \alpha_{x}                               \\
-     & (\im \alpha)_{x} = \im \alpha_{x}                                 \\
-     & (\mathcal{F}/\mathcal{F}')_{x} = \mathcal{F}_{x}/\mathcal{F}'_{x}
-  \end{align*}
-  が成り立つ。
-}{
-  $\mathcal{Q}(U) = \mathcal{F}(U)/\mathcal{F}'(U)$とおく。\\
-  このとき、アーベル群の完全列
+  が定義できる.実際,任意の$x\in V$をとる.$V \subset U$であり,
+$\sigma \in \mathcal{F}^{\dagger}(U)$より
   \begin{center}
-    \begin{tikzpicture}[auto]
-      \node (03) at (0,-1) {$0$};
-      \node (im1) at (2.5,-1) {$\mathcal{F}'(U)$};
-      \node (gu) at (5,-1) {$\mathcal{F}(U)$};
-      \node (qu) at (7.5,-1) {$\mathcal{Q}(U)$};
-      \node (04) at (10,-1) {$0$};
-
-      \draw[->] (03) to (im1);
-      \draw[->] (im1) to (gu);
-      \draw[->] (gu) to (qu);
-      \draw[->] (qu) to (04);
-    \end{tikzpicture}
+    $x\in \exists U_{0} \subset U$:open,$\exists s \in \mathcal{F}(U_{0})$\, s.t.\, $\sigma(y)=s_{y}\, (\forall y\in U_{0})$
   \end{center}
-  が作れる。帰納極限は完全列を完全列に移すので、またProp:\ref{Prop:1.3.7}より
-  \begin{center}
-    \begin{tikzpicture}[auto]
-      \node (03) at (0,-1) {$0$};
-      \node (im1) at (2.5,-1) {$\varinjlim \mathcal{F}'(U)$};
-      \node (gu) at (5,-1) {$\varinjlim \mathcal{F}(U)$};
-      \node (qu) at (7.5,-1) {$\varinjlim \mathcal{Q}(U)$};
-      \node (04) at (10,-1) {$0$};
-
-      \draw[->] (03) to (im1);
-      \draw[->] (im1) to (gu);
-      \draw[->] (gu) to (qu);
-      \draw[->] (qu) to (04);
-    \end{tikzpicture}
-  \end{center}
-  を得る。よって
-  \begin{center}
-    \begin{tikzpicture}[auto]
-      \node (03) at (0,-1) {$0$};
-      \node (im1) at (2.5,-1) {$\mathcal{F}'_{x}$};
-      \node (gu) at (5,-1) {$\mathcal{F}_{x}$};
-      \node (qu) at (7.5,-1) {$(\mathcal{F}/\mathcal{F}')_{x}$};
-      \node (04) at (10,-1) {$0$};
-
-      \draw[->] (03) to (im1);
-      \draw[->] (im1) to (gu);
-      \draw[->] (gu) to (qu);
-      \draw[->] (qu) to (04);
-    \end{tikzpicture}
-  \end{center}
-  したがって、
+$V_{0} = U_{0} \cap V,\quad t = s|_{V_{0}}$とすると任意の$y\in V_{0}$に対して
   \begin{equation*}
-    \mathcal{F}_{x}/\mathcal{F}'_{x} \simeq (\mathcal{F}/\mathcal{F}')_{x}
+    \sigma(y)=\sigma|_{V}(y)=s_{y}
   \end{equation*}
-  を得る。\\
-  次に
+  さらに帰納極限の定義から
+  \begin{equation*}
+    \sigma|_{V}(y)=t_{y}
+  \end{equation*}
+  次に$\mathcal{F}^{\dagger}(U)$がアーベル群,つまり
+$\sigma,\tau \in \mathcal{F}^{\dagger}(U)$ならば$\sigma+\tau \in \mathcal{F}^{\dagger}(U)$
+  を示そう.\\
+$\sigma,\tau \in \mathcal{F}^{\dagger}(U)$より任意の$x\in U$に対して
   \begin{align*}
-    (\ker \alpha)_{x}
-     & = \{s_{x} \in \mathcal{F}_{x} \ |\ \alpha(U)(s) = 0,x\in U:\text{open},s\in \mathcal{F}(U) \}   \\
-     & = \{s_{x} \in \mathcal{F}_{x} \ |\ \alpha_{x}(s_{x})=0,x\in U:\text{open},s\in \mathcal{F}(U)\} \\
-     & = \ker \alpha_{x}
+     & x\in \exists U_{0} \subset U:\mathrm{open},\exists s \in \mathcal{F}(U_{0})\ \mathrm{s.t.}\
+    \sigma(y) = s_{y}\ (\forall y \in U_{0})                                                       \\
+     & x\in \exists V_{0} \subset U:\mathrm{open},\exists t \in \mathcal{F}(V_{0})\ \mathrm{s.t.}\
+    \tau(z) = t_{z}\ (\forall z \in V_{0})
   \end{align*}
-  を得る。同様に
+  を満たす.いま$W = U_{0} \cap V_{0},s' = s|_{W},t' = t|_{W}$とすると,
   \begin{align*}
-    (\im \alpha)_{x}
-     & = \{t_{x} \in \mathcal{G}_{x} \ |\ x\in \exists U:\text{open}, \exists s\in \mathcal{F}(U)\ \text{s.t}\ t = \alpha(U)(s)\} \\
-     & = \{(\alpha(U)(s))_{x} \in \mathcal{G}_{x} \ |\ x \in U:\text{open},s\in \mathcal{F}(U)\}                                  \\
-     & = \{\alpha_{x}(s_{x}) \in \mathcal{G}_{x}\ |\ s_{x} \in \mathcal{F}_{x}\}                                                  \\
-     & = \im \alpha_{x}
+    x\in W \subset U:\mathrm{open}, s',t' \in \mathcal{F}(W)\ \mathrm{s.t.}\
+    (\sigma + \tau)(y)
+     & = \sigma(y) + \tau(y)             \\
+     & = s_{y} + t_{y}                   \\
+     & = (s + t)_{y} \ (\forall y \in W)
   \end{align*}
-}
+  よって$\sigma + \tau \in \mathcal{F}^{\dagger}(U)$また明らかに可換.
+  よって$\mathcal{F}^{\dagger}(U)$はアーベル群.\\
+  また,通常の制限で制限写像を定義しているため,$\mathcal{F}^{\dagger}$は前層となる.\\
+  更に層となることを示そう.\\
+$U$を$X$の開集合とし,$\{U_{i}\}_{i}$をその開被覆とする.$\sigma\in \mathcal{F}^{\dagger}(U)$が
+  任意の$i$に対して$\sigma|_{U_{i}} = 0$とする.つまり任意の$x \in U_{i}$に対して$\sigma(x) = 0$
+  とする.$U_{i}$は$U$を被覆するので結局$\sigma = 0$となる.\\
+  次に,$\sigma_{i} \in \mathcal{F}^{\dagger}(U_{i})$とし,
+$\sigma_{i}|_{U_{i} \cap U_{j}} = \sigma_{j}|_{U_{i} \cap U_{j}}$と仮定すると,
+  $$
+    \begin{array}{rccc}
+      \sigma : & U                     & \longrightarrow & \displaystyle \prod_{x\in U}\mathcal{F}_{x} \\
+               & \rotatebox{90}{$\in$} &                 & \rotatebox{90}{$\in$}                       \\
+               & x                     & \longmapsto     & \sigma_{i}(x)
+    \end{array}
+  $$
+  ただし,$x\in U_{i}$.すると,$\sigma$は$\sigma_{i}\in \mathcal{F}^{\dagger}(U_{i})$を張り合わせて作っているので
+  これは$\sigma \in \mathcal{F}(U)$となることが容易にわかる。よって、$\mathcal{F}^{\dagger}$は層になる。
+  }
 
-\Definition{
-  層の列
+
+
+  \Proposition{
+    層化の射$\theta:\mathcal{F} \to \mathcal{F}^{\dagger}$に対して、
+    その茎の射$\theta_{x}:\mathcal{F}_{x} \to \mathcal{F}^{\dagger}_{x}$は同型である。
+  }{}
+
+
+
+  \Lemma{
+    $\mathcal{F}$を$X$上の層とし、$\mathcal{F}'$を$\mathcal{F}$の部分層とする。
+    このとき開集合$U$を$\mathcal{F}(U)/\mathcal{F}'(U)$に対応させるものは前層になる。
+  }{
+    この対応を$\mathcal{G}$とおく。$V \subset U$なる開集合$U,V$をとる。制限写像を
+    $$
+      \begin{array}{rccc}
+        \rho_{U,V}^{\mathcal{G}} : & \mathcal{F}(U)/\mathcal{F}'(U) & \longrightarrow & \mathcal{F}(V)/\mathcal{F}'(V)                \\
+                                   & \rotatebox{90}{$\in$}          &                 & \rotatebox{90}{$\in$}                         \\
+                                   & s + \mathcal{F}'(U)            & \longmapsto     & \rho_{U,V}^{\mathcal{F}}(s) + \mathcal{F}'(V)
+      \end{array}
+    $$
+    とすると、これはwell-definedである。また、$U\subset V \subset W$なる開集合の組に対して
+    \begin{equation*}
+      \rho_{U,W}^{\mathcal{G}} = \rho_{V,W}^{\mathcal{G}} \circ \rho_{U,V}^{\mathcal{G}}
+    \end{equation*}
+    が成り立つことは制限写像の定義から明らかである。よって$\mathcal{G}$は前層。
+  }
+  \Definition{
+    Lem:\ref{Lem:1.3.8}で定義した前層の層化を$\mathcal{F}/\mathcal{F}'$と書いて、\textbf{商層(quotient shaef)}という。
+  }
+  \Definition{
+    $\alpha:\mathcal{F} \to \mathcal{G}$を前層の射とする。このとき開集合$U$に対して
+    $U \mapsto \ker ({\alpha(U)})$とするものは$\mathcal{F}$の部分層になる。これを$\ker{\alpha}$と
+    書いて、\textbf{$\alpha$の核(kernel of $\alpha$)}という。\\
+    更に、$U\mapsto \im (\alpha(U))$は一般には前層となるので、これの層化を$\im \alpha$と書いて、
+    \textbf{$\alpha$の像(image of $\alpha$)}という。
+  }
+  \Lemma{
+    $\mathcal{F,G}$を$X$上の層,$\mathcal{F}'$を$\mathcal{F}$の部分層,$\alpha:\mathcal{F} \to \mathcal{G}$を前層の射とする。
+    このとき、
+    \begin{align*}
+       & (\ker \alpha)_{x} = \ker \alpha_{x}                               \\
+       & (\im \alpha)_{x} = \im \alpha_{x}                                 \\
+       & (\mathcal{F}/\mathcal{F}')_{x} = \mathcal{F}_{x}/\mathcal{F}'_{x}
+    \end{align*}
+    が成り立つ。
+  }{
+    $\mathcal{Q}(U) = \mathcal{F}(U)/\mathcal{F}'(U)$とおく。\\
+    このとき、アーベル群の完全列
+    \begin{center}
+      \begin{tikzpicture}[auto]
+        \node (03) at (0,-1) {$0$};
+        \node (im1) at (2.5,-1) {$\mathcal{F}'(U)$};
+        \node (gu) at (5,-1) {$\mathcal{F}(U)$};
+        \node (qu) at (7.5,-1) {$\mathcal{Q}(U)$};
+        \node (04) at (10,-1) {$0$};
+
+        \draw[->] (03) to (im1);
+        \draw[->] (im1) to (gu);
+        \draw[->] (gu) to (qu);
+        \draw[->] (qu) to (04);
+      \end{tikzpicture}
+    \end{center}
+    が作れる。帰納極限は完全列を完全列に移すので、またProp:\ref{Prop:1.3.7}より
+    \begin{center}
+      \begin{tikzpicture}[auto]
+        \node (03) at (0,-1) {$0$};
+        \node (im1) at (2.5,-1) {$\varinjlim \mathcal{F}'(U)$};
+        \node (gu) at (5,-1) {$\varinjlim \mathcal{F}(U)$};
+        \node (qu) at (7.5,-1) {$\varinjlim \mathcal{Q}(U)$};
+        \node (04) at (10,-1) {$0$};
+
+        \draw[->] (03) to (im1);
+        \draw[->] (im1) to (gu);
+        \draw[->] (gu) to (qu);
+        \draw[->] (qu) to (04);
+      \end{tikzpicture}
+    \end{center}
+    を得る。よって
+    \begin{center}
+      \begin{tikzpicture}[auto]
+        \node (03) at (0,-1) {$0$};
+        \node (im1) at (2.5,-1) {$\mathcal{F}'_{x}$};
+        \node (gu) at (5,-1) {$\mathcal{F}_{x}$};
+        \node (qu) at (7.5,-1) {$(\mathcal{F}/\mathcal{F}')_{x}$};
+        \node (04) at (10,-1) {$0$};
+
+        \draw[->] (03) to (im1);
+        \draw[->] (im1) to (gu);
+        \draw[->] (gu) to (qu);
+        \draw[->] (qu) to (04);
+      \end{tikzpicture}
+    \end{center}
+    したがって、
+    \begin{equation*}
+      \mathcal{F}_{x}/\mathcal{F}'_{x} \simeq (\mathcal{F}/\mathcal{F}')_{x}
+    \end{equation*}
+    を得る。\\
+    次に
+    \begin{align*}
+      (\ker \alpha)_{x}
+       & = \{s_{x} \in \mathcal{F}_{x} \ |\ \alpha(U)(s) = 0,x\in U:\text{open},s\in \mathcal{F}(U) \}   \\
+       & = \{s_{x} \in \mathcal{F}_{x} \ |\ \alpha_{x}(s_{x})=0,x\in U:\text{open},s\in \mathcal{F}(U)\} \\
+       & = \ker \alpha_{x}
+    \end{align*}
+    を得る。同様に
+    \begin{align*}
+      (\im \alpha)_{x}
+       & = \{t_{x} \in \mathcal{G}_{x} \ |\ x\in \exists U:\text{open}, \exists s\in \mathcal{F}(U)\ \text{s.t}\ t = \alpha(U)(s)\} \\
+       & = \{(\alpha(U)(s))_{x} \in \mathcal{G}_{x} \ |\ x \in U:\text{open},s\in \mathcal{F}(U)\}                                  \\
+       & = \{\alpha_{x}(s_{x}) \in \mathcal{G}_{x}\ |\ s_{x} \in \mathcal{F}_{x}\}                                                  \\
+       & = \im \alpha_{x}
+    \end{align*}
+  }
+
+  \Definition{
+    層の列
+    \begin{equation*}
+      \mathcal{F} \stackrel{\alpha}{\longrightarrow} \mathcal{G} \stackrel{\beta}{\longrightarrow} \mathcal{H}
+    \end{equation*}
+    が完全とは、$\im \alpha = \ker \beta$が成り立つことをいう。
+  }
+  \Proposition{
+    層の列に対して次が成り立つ。
+    \begin{equation*}
+      \mathcal{F} \longrightarrow \mathcal{G} \longrightarrow \mathcal{H}が完全
+      \Longleftrightarrow
+      任意のx \in Xに対して\mathcal{F}_{x} \longrightarrow \mathcal{G}_{x} \longrightarrow \mathcal{H}_{x}が完全
+    \end{equation*}
+  }{
+    明らか。
+  }
+
+  \Definition{
+    $X,Y$を位相空間,$f:X\to Y$を連続写像とする。このとき、
+    $X$上の層$\mathcal{F}$,$Y$上の層$\mathcal{G}$に対して、新たな$Y$上の層$f_{*}\mathcal{F}$が
+    \begin{equation*}
+      V \mapsto \mathcal{F}(f^{-1}(V))
+    \end{equation*}
+    によって定義できる。これを\textbf{$\mathcal{F}$の順像(direct image of $\mathcal{F}$)}という。\\
+    また、
+    \begin{equation*}
+      U \mapsto \varinjlim_{V\supset f(U)}\mathcal{G}(V)
+    \end{equation*}
+    で定義できる新たな$X$上の前層の層化$f^{-1}\mathcal{G}$を\textbf{$\mathcal{G}$の逆像(inverse image of $\mathcal{G}$)}
+    という。
+  }
+
+  \Proposition{
+    上の状況で
+    \begin{equation*}
+      (f^{-1}\mathcal{G})_{x} = \mathcal{G}_{f(x)} \qquad \forall x \in X
+    \end{equation*}
+  }{
+    後で書く。
+  }
+
+  \Remark{
+    $V$を$Y$の開集合とする。このとき自然な単射$i:V \to Y$に対して
+    \begin{equation*}
+      i^{-1}\mathcal{G} = \mathcal{G}|_{V}
+    \end{equation*}
+    が成り立つ。
+  }
+
+  \Section{Ringed Topological Space}
+
+  \Definition{
+    \textbf{局所環付き空間}とは位相空間$X$と$X$上の環の層$\mathcal{O}_{X}$の組$(X,\mathcal{O}_{X})$
+    で、任意の$x\in X$に対して$\mathcal{O}_{X,x}$が局所環となるものをいう。また、この$\mathcal{O}_{X}$
+    を$(X,\mathcal{O}_{X})$の\textbf{構造層(structure sheaf)}という。また$(X,\mathcal{O}_{X})$を単に
+    $\mathcal{O}_{X}$と書くことがある。\\
+    また、$\mathcal{O}_{X,x}$の唯一の極大イデアル$\mathfrak{m}_{x}$に対して
+    その剰余体$\mathcal{O}_{X,x}/\mathfrak{m}_{x}$を\textbf{$X$の点$x$での剰余体(residue field of X at x)}といって$k(x)$と書く。
+  }
+
+  \Definition{
+  局所環付き空間の射とは
   \begin{equation*}
-    \mathcal{F} \stackrel{\alpha}{\longrightarrow} \mathcal{G} \stackrel{\beta}{\longrightarrow} \mathcal{H}
+    (f,f^{\#}): (X,\mathcal{O}_{X}) \to (Y,\mathcal{O}_{Y})
   \end{equation*}
-  が完全とは、$\im \alpha = \ker \beta$が成り立つことをいう。
-}
-\Proposition{
-  層の列に対して次が成り立つ。
-  \begin{equation*}
-    \mathcal{F} \longrightarrow \mathcal{G} \longrightarrow \mathcal{H}が完全
-    \Longleftrightarrow
-    任意のx \in Xに対して\mathcal{F}_{x} \longrightarrow \mathcal{G}_{x} \longrightarrow \mathcal{H}_{x}が完全
-  \end{equation*}
-}{
-  明らか。
-}
+  とは連続写像$f:X \to Y$と環の層の射$f^{\#}:\mathcal{O}_{Y} \to f_{*}\mathcal{O}_{X}$の組$(f,f^{\#})$で、
+  任意の$x\in X$に対して$f^{\#}_{x} : \mathcal{O}_{Y,f(x)} \to \mathcal{O}_{X,x}$は局所射となるものをいう。
+  }
 
-\Section{Ringed Topological Space}
-\Definition{
-  \textbf{局所環付き空間}とは位相空間$X$と$X$上の環の層$\mathcal{O}_{X}$の組$(X,\mathcal{O}_{X})$
-  で、任意の$x\in X$に対して$\mathcal{O}_{X,x}$が局所環となるものをいう。また、この$\mathcal{O}_{X}$
-  を$(X,\mathcal{O}_{X})$の\textbf{構造層(structure sheaf)}という。また$(X,\mathcal{O}_{X})$を単に
-  $\mathcal{O}_{X}$と書くことがある。\\
-  また、$\mathcal{O}_{X,x}$の唯一の極大イデアル$\mathfrak{m}_{x}$に対して
-  その剰余体$\mathcal{O}_{X,x}/\mathfrak{m}_{x}$を\textbf{$X$の点$x$での剰余体(residue field of X at x)}といって$k(x)$と書く。
-}
-
-\Definition{
-局所環付き空間の射とは
-\begin{equation*}
-  (f,f^{\#}): (X,\mathcal{O}_{X}) \to (Y,\mathcal{O}_{Y})
-\end{equation*}
-とは連続写像$f:X \to Y$と環の層の射$f^{\#}:\mathcal{O}_{Y} \to f_{*}\mathcal{O}_{X}$の組$(f,f^{\#})$で、
-任意の$x\in X$に対して$f^{\#}_{x} : \mathcal{O}_{Y,f(x)} \to \mathcal{O}_{X,x}$は局所射となるものをいう。
-}
+  \Definition{
+  射$(f,f^{\#}):(X,\mathcal{O}_{X}) \to (Y,\mathcal{O}_{Y})$が\textbf{open immersion}(resp. \textbf{closed immersion})
+  とは$f$がopen immersion(resp. closed immersion)でかつ任意の$x\in X$に対して$f^{\#}_{x}$が同型(resp. 全射)のときをいう。
+  }
 
 
-\clearpage
-\appendix
-\chapter{Limit}
-\Section{Inductive Limit}
-とりあえず,帰納極限だけ述べる.射影極限は双対概念なのでまぁ頑張って.
-\Definition{(帰納系の定義)\\
-($\Lambda,\leq$)を順序集合,$\mathscr{C}$を圏とする.各$\lambda \in \Lambda$に対し,$X_{\lambda} \in \text{Ob}(\mathscr{C})$が与えられ,
+  \clearpage
+  \appendix
+  \chapter{Limit}
+  \Section{Inductive Limit}
+  とりあえず,帰納極限だけ述べる.射影極限は双対概念なのでまぁ頑張って.
+  \Definition{(帰納系の定義)\\
+  ($\Lambda,\leq$)を順序集合,$\mathscr{C}$を圏とする.各$\lambda \in \Lambda$に対し,$X_{\lambda} \in \text{Ob}(\mathscr{C})$が与えられ,
 $\lambda \leq \mu$に対して射$\varphi_{\mu,\lambda}:X_{\lambda} \to X_{\mu}$があって
-次を満たすとき,$\{X_{\lambda},\varphi_{\mu,\lambda}\}$を\textbf{順系(direct system)}または
-\textbf{帰納系(inductive system)}という.しばし$\varphi_{\mu,\lambda}$を省略して$\{X_{\lambda}\}_{\lambda \in \Lambda}$や$\{X_{\lambda}\}_{\lambda}$で表す.
-\begin{itemize}
-  \item[---] 任意の$\lambda \in \Lambda$に他逸して$\varphi_{\lambda,\lambda}=\text{id}_{X_{\lambda}}$
-  \item[---] $\lambda \leq \mu \leq \nu$なる任意の$\lambda,\mu,\nu \in \Lambda$に対して$\varphi_{\nu,\lambda} = \varphi_{\nu,\mu}\circ \varphi_{\mu,\lambda}$
-\end{itemize}
-}
-\Example{
-位相空間$X$の開集合族$\{U\}_{U}$に対して
-\begin{equation*}
-  U \leq V \defi V \subset U
-\end{equation*}
-と定義する.そして,$\mathbf{AGrp}$をアーベル群の成す圏,$\mathcal{F}$を$X$上の前層とする.すると,各開集合$U$に対し,$\mathcal{F}(U) \in \mathrm{Ob}(\mathbf{AGrp})$で,
-前層の定義からアーベル群と制限写像との組$\{\mathcal{F}(U),\rho_{U,V}\}$は帰納系となる.前層の定義はDef:\ref{Def:1.3.1}を参照.
-}{}
-\Definition{(帰納系の射の定義)\\
+  次を満たすとき,$\{X_{\lambda},\varphi_{\mu,\lambda}\}$を\textbf{順系(direct system)}または
+  \textbf{帰納系(inductive system)}という.しばし$\varphi_{\mu,\lambda}$を省略して$\{X_{\lambda}\}_{\lambda \in \Lambda}$や$\{X_{\lambda}\}_{\lambda}$で表す.
+  \begin{itemize}
+    \item[---] 任意の$\lambda \in \Lambda$に他逸して$\varphi_{\lambda,\lambda}=\text{id}_{X_{\lambda}}$
+    \item[---] $\lambda \leq \mu \leq \nu$なる任意の$\lambda,\mu,\nu \in \Lambda$に対して$\varphi_{\nu,\lambda} = \varphi_{\nu,\mu}\circ \varphi_{\mu,\lambda}$
+  \end{itemize}
+  }
+  \Example{
+  位相空間$X$の開集合族$\{U\}_{U}$に対して
+  \begin{equation*}
+    U \leq V \defi V \subset U
+  \end{equation*}
+  と定義する.そして,$\mathbf{AGrp}$をアーベル群の成す圏,$\mathcal{F}$を$X$上の前層とする.すると,各開集合$U$に対し,$\mathcal{F}(U) \in \mathrm{Ob}(\mathbf{AGrp})$で,
+  前層の定義からアーベル群と制限写像との組$\{\mathcal{F}(U),\rho_{U,V}\}$は帰納系となる.前層の定義はDef:\ref{Def:1.3.1}を参照.
+  }{}
+  \Definition{(帰納系の射の定義)\\
 $\Lambda$を順序集合.$\{X_{\lambda},\varphi_{\lambda,\mu}\},\{Y_{\lambda},\psi_{\lambda,\mu}\}$を$\Lambda$上の圏$\mathscr{C}$における帰納系とする.
-このとき$\{X_{\lambda}\}$から$\{Y_{\lambda}\}$への射とは$f_{\lambda}:X_{\lambda} \to Y_{\lambda}$なる射の族
+  このとき$\{X_{\lambda}\}$から$\{Y_{\lambda}\}$への射とは$f_{\lambda}:X_{\lambda} \to Y_{\lambda}$なる射の族
 $\{f_{\lambda}\}$で,任意の$\lambda \leq \mu$に対して
 $\psi_{\lambda,\mu}\circ f_{\mu} = f_{\lambda}\circ \varphi_{\lambda,\mu}$となるものを言う.
-%---------------後に図式を追加する.------------------%
-\begin{center}
-  \begin{tikzpicture}[auto]
-    \node (X1) at (0,0) {$X_{\mu}$};
-    \node (X2) at (0,-2.5) {$X_{\lambda}$};
-    \node (Y1) at (2.5,0) {$Y_{\mu}$};
-    \node (Y2) at (2.5,-2.5) {$Y_{\lambda}$};
-    \node (ci) at (1.25,-1.25) {$\circlearrowleft$};
+  %---------------後に図式を追加する.------------------%
+  \begin{center}
+    \begin{tikzpicture}[auto]
+      \node (X1) at (0,0) {$X_{\mu}$};
+      \node (X2) at (0,-2.5) {$X_{\lambda}$};
+      \node (Y1) at (2.5,0) {$Y_{\mu}$};
+      \node (Y2) at (2.5,-2.5) {$Y_{\lambda}$};
+      \node (ci) at (1.25,-1.25) {$\circlearrowleft$};
 
-    \draw[->] (X1) to node[yshift = -6pt,label=above:$f_{\mu}$] () {} (Y1);
-    \draw[->] (X1) to node[label=left:$\varphi_{\lambda,\mu}$] () {} (X2);
-    \draw[->] (X2) to node[yshift = -2pt,label=below:$f_{\lambda}$] () {} (Y2);
-    \draw[->] (Y1) to node[xshift = -6pt,label=right:$\psi_{\lambda,\mu}$] () {} (Y2);
-  \end{tikzpicture}
-\end{center}
-}
-\Definition{
+      \draw[->] (X1) to node[yshift = -6pt,label=above:$f_{\mu}$] () {} (Y1);
+      \draw[->] (X1) to node[label=left:$\varphi_{\lambda,\mu}$] () {} (X2);
+      \draw[->] (X2) to node[yshift = -2pt,label=below:$f_{\lambda}$] () {} (Y2);
+      \draw[->] (Y1) to node[xshift = -6pt,label=right:$\psi_{\lambda,\mu}$] () {} (Y2);
+    \end{tikzpicture}
+  \end{center}
+  }
+  \Definition{
 $\mathscr{C}$を圏とし,$\Lambda$を順序集合とする.$\{X_{\lambda},\varphi_{\mu,\lambda}\}$を
 $\mathscr{C}$の帰納系とする.\\
-このとき$\{X_{\lambda},\varphi_{\mu,\lambda}\}$の\textbf{順極限(direct limit)}または\textbf{帰納的極限(inductive limit)}または\textbf{帰納極限}とは,
+  このとき$\{X_{\lambda},\varphi_{\mu,\lambda}\}$の\textbf{順極限(direct limit)}または\textbf{帰納的極限(inductive limit)}または\textbf{帰納極限}とは,
 $\mathscr{C}$の対象$\displaystyle \varinjlim_{\lambda \in \Lambda}X_{\lambda} \in \text{Ob}(\mathscr{C})$
-と射の族$\displaystyle \{\varphi_{\lambda}:X_{\lambda} \to \varinjlim_{\lambda \in \Lambda}X_{\lambda}\}_{\lambda \in \Lambda}$の組
+  と射の族$\displaystyle \{\varphi_{\lambda}:X_{\lambda} \to \varinjlim_{\lambda \in \Lambda}X_{\lambda}\}_{\lambda \in \Lambda}$の組
 $\{\varinjlim X_{\lambda},\varphi_{\lambda}\}$で,次の条件を満たすものをいう.
 \begin{itemize}
   \item[---] $\lambda \leq \mu$に対して$\varphi_{\mu}\circ \varphi_{\mu,\lambda} = \varphi_{\lambda}$
