--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -853,11 +853,15 @@ $$
     $(j,j^{\#}):(V(\mathcal{J}),j^{-1}(\mathcal{O}_{X}/\mathcal{J})) \to (X,\mathcal{O}_{X})$は閉はめ込みである。
   \end{itemize}
 }{
+  \Claim{1}$V(\mathcal{J})$は$X$の閉集合\\
   $x\in X\mysetminus V(\mathcal{J}) = \{x\in X\ |\ \mathcal{J}_{x} = \mathcal{O}_{X,x}\}$
   に対して$f_{x} = 1$なる$x$の開近傍$U$と$f\in \mathcal{J}(U)$をとる。
   つまり$f|_{V} = 1|_{V} = 1$なる$x$の開近傍$V \subset U$がある。
-  すると$V\subset X \mysetminus V(\mathcal{J})$となって$X\mysetminus V(\mathcal{J})$が開であることがわかる。\\
-  また、任意の$x\in V(\mathcal{J})$に対して
+  すると任意の$y \in V$に対して$f_{y} = 1 \in \mathcal{J}_{y}$となって,この$y$に対して
+  $\mathcal{J}_{y} = \mathcal{O}_{X,y}$なので
+  $V\subset X \mysetminus V(\mathcal{J})$となって$X\mysetminus V(\mathcal{J})$が開であることがわかる。\\
+  \Claim{2}$(V(\mathcal{J}),j^{-1}(\mathcal{O}_{X}/\mathcal{J}))$は局所環付き空間\\
+  任意の$x\in V(\mathcal{J})$に対して
   \begin{equation*}
     (j^{-1}(\mathcal{O}_{X}/\mathcal{J}))_{x} = (\mathcal{O}_{X}/\mathcal{J})_{x} = \mathcal{O}_{X,x}/\mathcal{J}_{x}
   \end{equation*}
@@ -880,8 +884,13 @@ $$
   \end{equation*}
   を得る。次の完全列とProp:\ref{Prop:1.3.10}から
   \begin{equation*}
-    0 \longrightarrow \mathcal{J} \longrightarrow \mathcal{O}_{X} \longrightarrow f_{*}\mathcal{O}_{X} \longrightarrow 0
+    0 \longrightarrow \mathcal{J} \longrightarrow \mathcal{O}_{X} \longrightarrow f_{*}\mathcal{O}_{Y} \longrightarrow 0
   \end{equation*}
+  から
+  \begin{equation*}
+    \mathcal{O}_{X,x}/\mathcal{J}_{x} = (f_{*}\mathcal{O}_{Y})_{x}
+  \end{equation*}
+  を得る。
   $V(\mathcal{J}) = f(Y)$から
   \begin{equation*}
     X \mysetminus V(\mathcal{J}) = X \mysetminus f(Y)
@@ -913,7 +922,7 @@ $\lambda \leq \mu$に対して射$\varphi_{\mu,\lambda}:X_{\lambda} \to X_{\mu}$
   次を満たすとき,$\{X_{\lambda},\varphi_{\mu,\lambda}\}$を\textbf{順系(direct system)}または
   \textbf{帰納系(inductive system)}という.しばし$\varphi_{\mu,\lambda}$を省略して$\{X_{\lambda}\}_{\lambda \in \Lambda}$や$\{X_{\lambda}\}_{\lambda}$で表す.
   \begin{itemize}
-    \item[---] 任意の$\lambda \in \Lambda$に他逸して$\varphi_{\lambda,\lambda}=\text{id}_{X_{\lambda}}$
+    \item[---] 任意の$\lambda \in \Lambda$に対して$\varphi_{\lambda,\lambda}=\text{id}_{X_{\lambda}}$
     \item[---] $\lambda \leq \mu \leq \nu$なる任意の$\lambda,\mu,\nu \in \Lambda$に対して$\varphi_{\nu,\lambda} = \varphi_{\nu,\mu}\circ \varphi_{\mu,\lambda}$
   \end{itemize}
   }
