--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -899,6 +899,19 @@ $$
   \begin{equation*}
     f = j \circ g
   \end{equation*}
+  で、
+  \begin{equation*}
+    j_{*}\mathcal{O}_{Z} = \mathcal{O}_{X}/\mathcal{J} \simeq f_{*}\mathcal{O}_{Y}
+  \end{equation*}
+  がわかる。容易に
+  \begin{equation*}
+    f_{*}\mathcal{O}_{Y} = j_{*}g_{*}\mathcal{O}_{Y}
+  \end{equation*}
+  が分かるので
+  \begin{equation*}
+    \mathcal{O}_{Z} = j^{-1}j_{*}\mathcal{O}_{Z} \simeq j^{-1}j_{*}g_{*}\mathcal{O}_{Y} = g_{*}\mathcal{O}_{Y}
+  \end{equation*}
+  である。よって、$g$は局所環付き空間の同型射である。$f=j\circ g$が局所環付き空間の射であることを確認するのは読者に委ねる。
 }
 
 
