--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -869,50 +869,89 @@ $$
 }
 
 \Proposition{
-  $f:Y \to X$を局所環付き空間の閉はめ込みとする。$Z$を局所環付き空間$V(\mathcal{J})$とする。
-  ただし、$\mathcal{J} = \ker f^{\#}\subset \mathcal{O}_{X}$.すると$Y\simeq Z$を始域の制限による
-  自然な閉はめ込み$f|_{Z}:Z \to X$から得る。
+  $f:X \to Y$を局所環付き空間の閉はめ込みとする。$Z$を局所環付き空間$V(\mathcal{J})$とする。
+  ただし、$\mathcal{J} = \ker f^{\#}\subset \mathcal{O}_{Y}$.すると$X\simeq Z$を自然な閉はめ込み
+  $Z \hookrightarrow Y$から得る。
 }{
-  $f(Y)$は$X$の閉集合であることから
+まず次の完全列
   \begin{equation*}
-    (f_{*}\mathcal{O}_{Y})_{x} = \left\{ 
+    0 \longrightarrow \mathcal{J} \longrightarrow \mathcal{O}_{Y} \longrightarrow f_{*}\mathcal{O}_{X} \longrightarrow 0
+  \end{equation*}
+  からProp:\ref{Prop:1.3.11}より任意の$y = f(x) \in Y$に対して
+  \begin{equation*}
+    \mathcal{O}_{Y,y}/\mathcal{J}_{y} = (f_{*}\mathcal{O}_{X})_{y} = \mathcal{O}_{X,x}
+  \end{equation*}
+  を得る。よって
+  \begin{equation*}
+    (f_{*}\mathcal{O}_{X})_{y} = \left\{ 
     \begin{alignedat}{2}
-      &\quad 0 \qquad &x& \in X \mysetminus f(Y)\\
-      &\mathcal{O}_{Y,y} \qquad &x& = f(y)
+      &\quad 0 \qquad &y& \in Y \mysetminus V(\mathcal{J})\\
+      &\mathcal{O}_{X,x} \qquad &y& \in V(\mathcal{J}),y=f(x)
+    \end{alignedat}
+    \right.\qquad \cdots (*)
+  \end{equation*}
+  を得る。$f(X)$は$Y$の閉集合なので$x\in Y\mysetminus f(X)$の開近傍$U$で
+  \begin{equation*}
+    f(X)\cap U = \varnothing
+  \end{equation*}
+  となるものがとれる。よって
+  \begin{equation*}
+    f_{*}\mathcal{O}_{X}(U) = \mathcal{O}_{X}(f^{-1}(U)) = \mathcal{O}_{X}(\varnothing) = 0
+  \end{equation*}
+  したがって、
+  \begin{equation*}
+    (f_{*}\mathcal{O}_{X})_{x} = 0
+  \end{equation*}
+  また、$x\in f(X)$の開近傍$U$に対して$f$での引き戻し$f^{-1}(U)$は$y=f(x)$の開近傍である。
+  これを$V$とおく。逆に、$f$は閉はめ込みなので、$X$は$f(X)$と同相なので$X$に自然に$Y$の相対位相が入る。
+  つまり、任意の$x\in X$の開近傍$U$に対して$y=f(x)\in Y$の開近傍$V$が存在して$f^{-1}(V)$とかける。
+  よって、
+  \begin{equation*}
+    (f_{*}\mathcal{O}_{X})_{x} = \varinjlim_{U \ni x}f_{*}\mathcal{O}_{X}(U) = \varinjlim_{U \ni x}\mathcal{O}_{X}(f^{-1}(U)) = \varinjlim_{V \ni y}\mathcal{O}_{X}(V) = \mathcal{O}_{X,y}
+  \end{equation*}
+  つまり、
+  \begin{equation*}
+    (f_{*}\mathcal{O}_{X})_{y} = \left\{ 
+    \begin{alignedat}{2}
+      &\quad 0 \qquad &y& \in Y \mysetminus f(X)\\
+      &\mathcal{O}_{X,x} \qquad &y& = f(x)
     \end{alignedat}
     \right.
   \end{equation*}
-  を得る。次の完全列とProp:\ref{Prop:1.3.10}から
+  $(*)$と比較すれば
   \begin{equation*}
-    0 \longrightarrow \mathcal{J} \longrightarrow \mathcal{O}_{X} \longrightarrow f_{*}\mathcal{O}_{Y} \longrightarrow 0
+    V(\mathcal{J}) = f(X)
   \end{equation*}
-  から
-  \begin{equation*}
-    \mathcal{O}_{X,x}/\mathcal{J}_{x} = (f_{*}\mathcal{O}_{Y})_{x}
-  \end{equation*}
-  を得る。
-  $V(\mathcal{J}) = f(Y)$から
-  \begin{equation*}
-    X \mysetminus V(\mathcal{J}) = X \mysetminus f(Y)
-  \end{equation*}
-  なので、$j:Z \hookrightarrow X$を包含写像とすると、$f$から誘導される同相写像$g:Y \to Z$に対して
+  が分かる。
+  なので、$j:Z \hookrightarrow Y$を包含写像とすると、$f$から誘導される同相写像$g:X \to Z$に対して
   \begin{equation*}
     f = j \circ g
   \end{equation*}
   で、
   \begin{equation*}
-    j_{*}\mathcal{O}_{Z} = \mathcal{O}_{X}/\mathcal{J} \simeq f_{*}\mathcal{O}_{Y}
+    j_{*}\mathcal{O}_{Z} = \mathcal{O}_{Y}/\mathcal{J} \simeq f_{*}\mathcal{O}_{X}
   \end{equation*}
   がわかる。容易に
   \begin{equation*}
-    f_{*}\mathcal{O}_{Y} = j_{*}g_{*}\mathcal{O}_{Y}
+    f_{*}\mathcal{O}_{X} = j_{*}g_{*}\mathcal{O}_{X}
   \end{equation*}
   が分かるので
   \begin{equation*}
-    \mathcal{O}_{Z} = j^{-1}j_{*}\mathcal{O}_{Z} \simeq j^{-1}j_{*}g_{*}\mathcal{O}_{Y} = g_{*}\mathcal{O}_{Y}
+    \mathcal{O}_{Z} = (j^{-1}\circ j)_{*}\mathcal{O}_{Z} = (j^{-1})_{*}j_{*}\mathcal{O}_{Z}\simeq (j^{-1})_{*}j_{*}g_{*}\mathcal{O}_{X} = (j^{-1}\circ j)_{*} g_{*}\mathcal{O}_{X} = g_{*}\mathcal{O}_{X}
   \end{equation*}
   である。よって、$g$は局所環付き空間の同型射である。$f=j\circ g$が局所環付き空間の射であることを確認するのは読者に委ねる。
 }
+
+
+
+\Section{Schemes}
+
+\Proposition{
+  $A$を環、$X=\text{Spec}\, A$とする。このとき以下が成り立つ。
+  \begin{itemize}
+    \item[(1)] $\mathcal{O}_{X}'$を環の$\mathfrak{B}$-層とする。$\mathcal{O}_{X}$が誘導する$X$上の層$\mathcal{O}_{X}$は$\mathcal{O}_{X}(X)=A$となる。
+  \end{itemize}
+}{}
 
 
 
